# embedded_arm_development

./: .clangd  .gitignore  Dockerfile  README.md
_ref/: makefile_for_gd32_with_gcc.txt
docker/: Dockerfile
gd32e23x/: .justfile  CMakeLists.txt
gd32e23x/gd32e23x/: CMakeLists.txt  gcc-cortex-m23.cmake  gd32e23x.h  gd32e23x_libopt.h.in  linker_gd32e230k8t6.ld  openocd.cfg  startup_gd32e230k8t6.S  system_gd32e23x.c  system_gd32e23x.h
gd32e23x/src/: main.c
gd32f30x/: .justfile  CMakeLists.txt
gd32f30x/gd32f30x/: CMakeLists.txt  gcc-cortex-m4.cmake  linker_gd32f303cct6.ld  openocd.cfg  startup_gd32f303cct6.S  system_gd32f30x.c  system_gd32f30x.h
gd32f30x/src/: main.c
